<resources>
    <string name="app_name">云课堂</string>


    <string name="tip_error_state">异常错误，请重试！</string>
    <string name="error_server_message">请求失败：服务器繁忙！</string>
    <string name="tip_no_more_data">没有更多内容！</string>


    <string name="state_empty_tip">未获取到内容，点我重试</string>
    <string name="state_error_server_tip">请求失败，点我重试</string>
    <string name="state_loading_tip">玩命加载中</string>

    <string name="home_page_text">首页</string>
    <string name="live_text">直播</string>
    <string name="friend_text">好友</string>
    <string name="mine_text">账号</string>

    <string name="search_friend_text">好友搜索</string>


    <string name="excellent_course">精品课程</string>
    <string name="search_excellent_course">精品课程搜索</string>
    <string name="forum">论坛</string>
    <string name="forum_type">板块:</string>
    <string name="forum_title">标题:</string>
    <string name="forum_hint_input_title">请输入标题</string>
    <string name="forum_content">内容:</string>
    <string name="forum_hint_input_content">请输入帖子内容</string>
    <string name="forum_publish">发布帖子</string>
    <string name="tip_no_forum_type_selected">请选择帖子类型,再试！</string>
    <string name="tip_no_forum_title">请填写帖子标题,再试！</string>
    <string name="tip_no_forum_content">请填写帖子内容,再试！</string>
    <string name="teacher_master">精英名师</string>
    <string name="hint_search_teacher_master">精英名师搜索</string>
    <string name="test_pool">题库</string>
    <string name="hint_search_test_pool">题库资源搜索</string>
    <string name="course_recommend">课程推荐</string>
    <string name="course_comment">课程评论</string>
    <string name="course_brief">课程简介</string>
    <string name="course_relative">相关课程</string>

    <string name="tip_hint_input_search">请输入搜索内容</string>


    <!--begin personal info-->
    <string name="person_info">个人信息</string>
    <string name="modify_person_info">修改信息</string>
    <string name="modify_person_password">修改密码</string>
    <string name="teacher_attestation">教师认证</string>

    <string name="password_original">旧密码</string>
    <string name="password_new">新密码</string>
    <string name="password_new_again">再次输入新密码</string>

    <string name="tip_two_time_not_same">两次输入密码不一致！</string>

    <string name="teacher_attestation_title">教师认证</string>
    <string name="teacher_qualification_no">教师资格证号:</string>

    <string name="ic_card_front_pic">手持身份证照片正面</string>
    <string name="ic_card_back_pic">手持身份证照片背面</string>
    <string name="teacher_card_pic">教师资格证照片</string>
    <string name="hint_input_teach_card">请输入教师资格证号</string>

    <string name="attestation_text">认证</string>

    <string name="head_text">头像</string>
    <string name="pet_name">昵称</string>
    <string name="phone_no">手机号</string>
    <string name="address">地址</string>
    <string name="school">学校</string>
    <string name="major">专业</string>
    <string name="grade">年级</string>
    <string name="the_class">班级</string>
    <string name="department">系/科</string>
    <string name="student_id">学号</string>
    <string name="teach_course">所教课程</string>
    <string name="password_check">密码校验</string>

    <string name="teacher">老师</string>
    <string name="student">学生</string>


    <!--end personal info-->


    <!--login-->
    <string name="hint_input_account">请输入账号</string>
    <string name="hint_input_password">密码</string>
    <string name="hint_input_password_check">请输入密码</string>
    <string name="login_btn_text">登录</string>
    <string name="tip_no_password_black">如没有账户，请</string>
    <string name="tip_no_password_green">注册</string>
    <string name="tip_input_phone_num">请输入手机号</string>
    <string name="confirm_modify_phoneno">确认修改</string>
    <string name="tip_input_user_name">请输入用户名</string>
    <string name="tip_input_image_code">请输入图形验证码</string>
    <string name="tip_error_image_code">图形验证码错误！</string>
    <string name="tip_input_msg_code">请输入短信验证码</string>
    <string name="tip_input_password">密码</string>
    <string name="tip_input_password_again">再次输入密码</string>
    <string name="tip_input_account">用户名</string>
    <string name="get_check_code">获取验证码</string>
    <string name="get_password">找回密码</string>
    <string name="btn_register">注册</string>
    <string name="btn_back_login">返回登录</string>
    <string name="tip_logout_text">真的要退出吗？</string>
    <string name="confirm_logout_text">确认</string>
    <string name="cancel_logout_text">取消</string>
    <string name="next_step">下一步</string>

    <string name="tip_not_fill_all_content">请填写所有输入项，再重试！</string>


    <string name="tab_item_class">选择类别</string>
    <string name="forum_search_hint">论坛</string>
    <string name="forum_essence">精华</string>
    <string name="forum_detail">帖子详情</string>
    <string name="tip_input_comment">请输入评论内容！</string>
    <string name="tip_comment_success">评论发布成功！</string>
    <string name="comment_nums">评论总数:</string>
    <string name="send_comment_hit">发表评论</string>
    <string name="send_comment">发送</string>

    <string name="download">下载</string>
    <string name="interest">关注</string>
    <string name="message">私信</string>
    <string name="study">学习</string>
    <string name="collection">收藏</string>
    <string name="comments">评论</string>

    <string name="friend_apply_add">我申请添加的</string>
    <string name="friend_apply_from">申请添加我的</string>
    <string name="add_as_friend">添加到好友列表</string>

    <string name="cancel_interest">取消关注</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="hint_remain_words">留下你想说的话</string>
    <string name="reply_message">回复私信</string>
    <string name="send_message">发送</string>
    <string name="modify_personal_info">确认修改</string>

    <string name="confirm_choose">确认选择</string>


</resources>
