<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/window_bg"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >

        <include layout="@layout/view_toolbar" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/divide_line_gray" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/et_phone_num"
                style="@style/CommonInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tip_input_phone_num"
                android:inputType="phone"
                android:maxLength="11" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divide_line_gray" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/et_image_code"
                style="@style/CommonInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tip_input_image_code"
                android:imeOptions="actionNext"
                android:maxLength="4"

                android:nextFocusForward="@+id/et_input_check_code"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/iv_image_code"
                android:layout_width="130dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@color/divide_line_gray" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divide_line_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/et_input_check_code"
                style="@style/CommonInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tip_input_msg_code"
                android:imeOptions="actionNext"
                android:maxLength="6"
                android:nextFocusForward="@+id/et_input_password"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tv_getCheckCode"
                style="@style/BtnGreenSingleLine"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"

                android:text="@string/get_check_code"

                />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divide_line_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/et_input_password"
                style="@style/CommonInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tip_input_password"
                android:inputType="textPassword" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divide_line_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/et_input_password_again"
                style="@style/CommonInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tip_input_password_again"
                android:inputType="textPassword" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divide_line_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/et_input_username"
                style="@style/CommonInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tip_input_account"
                android:imeOptions="actionDone"
                android:singleLine="true" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divide_line_gray" />


        <TextView
            android:id="@+id/tv_register"
            style="@style/BtnGreenSingleLine"
            android:layout_width="@dimen/qb_px_225"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/btn_register"

            />

        <TextView
            android:id="@+id/tv_back"
            style="@style/BtnBackGreen"
            android:layout_width="@dimen/qb_px_225"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_rectangle_green"
            android:text="@string/btn_back_login" />


    </LinearLayout>
</ScrollView>