<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/window_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
   >
    <include layout="@layout/view_toolbar"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divide_line_gray"
        android:layout_marginTop="5dp"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >
        <EditText
            android:id="@+id/et_phone_num"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tip_input_phone_num"
            android:maxLength="11"

            style="@style/CommonInputEditTextStyle"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divide_line_gray"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >
        <EditText
            android:id="@+id/et_image_code"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tip_input_image_code"
            android:maxLength="11"

            style="@style/CommonInputEditTextStyle"
            />
        
        <ImageView
            android:id="@+id/iv_image_code"
            android:layout_width="130dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/divide_line_gray"
            />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divide_line_gray"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >
        <EditText
            android:id="@+id/et_input_check_code"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tip_input_msg_code"
            android:maxLength="11"

            style="@style/CommonInputEditTextStyle"
            />

        <TextView
            android:id="@+id/tv_getCheckCode"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/get_check_code"

            style="@style/BtnGreenSingleLine"

            />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divide_line_gray"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >
        <EditText
            android:id="@+id/et_input_password"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tip_input_password"
            android:maxLength="11"

            style="@style/CommonInputEditTextStyle"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divide_line_gray"
        />


    <TextView
        android:id="@+id/tv_find_password"
        android:layout_width="@dimen/qb_px_225"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/get_password"

        style="@style/BtnGreenSingleLine"

        />



</LinearLayout>
