<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/window_bg"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >

        <include layout="@layout/view_toolbar" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/divide_line_gray" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/et_user_name"
                style="@style/CommonInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tip_input_user_name"
                android:inputType="phone"
                android:maxLength="11" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divide_line_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/et_input_phoneno"
                style="@style/CommonInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tip_input_phone_num"
                android:imeOptions="actionDone"
                android:singleLine="true" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divide_line_gray" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/iv_choose_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/oval_gray_ring_64"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                />

            <TextView
                android:id="@+id/tv_type_teacher"
                android:layout_toRightOf="@+id/iv_choose_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teacher"
                android:textColor="@color/hint_text_gray"
                android:textSize="15sp"
                android:layout_marginStart="10dp"
                />


            <ImageView
                android:id="@+id/iv_choose_student"
                android:layout_toRightOf="@+id/tv_type_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/oval_green_64"
                android:layout_centerVertical="true"
                android:layout_marginStart="40dp"
                />

            <TextView
                android:id="@+id/tv_type_student"
                android:layout_toEndOf="@+id/iv_choose_student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student"
                android:textColor="@color/hint_text_gray"
                android:textSize="15sp"
                android:layout_marginStart="10dp"
                />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divide_line_gray" />



        <TextView
            android:id="@+id/tv_next_step"
            style="@style/BtnGreenSingleLine"
            android:layout_width="@dimen/qb_px_225"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/next_step"

            />


    </LinearLayout>
</ScrollView>