<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_bg"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fl_main_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/qb_px_8"
        android:background="@color/divide_line_gray" />


    <LinearLayout
        android:id="@+id/ly_tab_menu"
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_53"
        android:layout_gravity="bottom"
        android:layout_marginBottom="-2dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_home_navi"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="-10dp"
            android:drawableTop="@drawable/selector_bottom_navi_home"
            android:gravity="center"
            android:text="@string/home_page_text"
            android:textColor="@color/title_text"
            />

        <TextView
            android:id="@+id/tv_live_navi"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="-10dp"
            android:drawableTop="@drawable/selector_bottom_navi_live"
            android:gravity="center"
            android:text="@string/live_text"
            android:textColor="@color/title_text" />

        <TextView
            android:id="@+id/tv_friend_navi"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="-10dp"
            android:drawableTop="@drawable/selector_bottom_navi_friend"
            android:gravity="center"
            android:text="@string/friend_text"
            android:textColor="@color/title_text" />

        <!--<RelativeLayout-->
            <!--android:id="@+id/home_navi_rl"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1">-->

            <!--<TextView-->
                <!--android:id="@+id/car_navi"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:drawablePadding="-10dp"-->
                <!--android:drawableTop="@drawable/selector_bottom_navi_friend"-->
                <!--android:gravity="center"-->
                <!--android:text="好友"-->
                <!--android:textColor="@color/title_text" />-->

            <!--<ImageView-->
            <!--android:id="@+id/car_navi_iv"-->
            <!--android:layout_width="30dp"-->
            <!--android:layout_height="30dp"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:src="@drawable/bottom_navi_car_selector"-->
            <!--/>-->

            <!--<TextView-->
            <!--style="@style/order_status_text_style"-->
            <!--android:layout_below="@+id/car_navi_iv"-->
            <!--android:text="购物车"-->
            <!--android:textColor="@drawable/bottom_navi_text_selector"-->
            <!--android:layout_marginTop="2dp"-->
            <!--/>-->

            <!--<TextView-->
            <!--android:id="@+id/goods_num_in_car_tv"-->
            <!--style="@style/order_status_num_tip_style"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:text="0"-->
            <!--android:background="@drawable/gray_circle_bg_shape"-->
            <!--android:visibility="visible" />-->

        <!--</RelativeLayout>-->


        <TextView
            android:id="@+id/tv_mine_navi"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="-10dp"
            android:drawableTop="@drawable/selector_bottom_navi_mine"
            android:gravity="center"
            android:text="@string/mine_text"
            android:textColor="@color/title_text" />

    </LinearLayout>

</LinearLayout>
